fixed logo stretching

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,6 @@ p {
 
 img {
   display: block;
-  width: 100%;
 }
 
 main {
